--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>TodoList</title>
+
+	<link rel="stylesheet" href="./src/css/normalize.css"/>
+	<link rel="stylesheet" href="./src/css/style.css"/>
+
 </head>
 <body>
 	<div id="root"></div>
